--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
       /* Styling Only Related To THIS Page */
       .parent-flex {
         display: flex;
-        background-color: purple;
+        background-color: pink;
         align-items: center;
         justify-content: space-around;
         margin-bottom: 50px;
@@ -19,7 +19,7 @@
         padding: 20px;
       }
       .child-flex p {
-        background-color: pink;
+        background-color: white;
         padding: 20px;
         margin: 20px;
       }
@@ -58,13 +58,7 @@
       </div>
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+        My name is Brianna Perez and I was born and raised in New York. I have one brother named Justion and a neice and nephew named Juilianna and Jeremiah.  
         </p>
       </div>
     </div>
