📫✴️ Updated with Glitch

--- a/art.html
+++ b/art.html
@@ -26,7 +26,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="aboutme.html">About Me</a></li>
       <li><a class="active" href="art.html">Resources</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a href="resume.html">❤️e</a></li>
   
     </ul>
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
@@ -38,6 +38,7 @@
         src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/blogs/7823/images/Fcf5dSU6QNi9742TUard_Coalition-5c40fd7d46e0fb00015ee330_1.jpg"
       />
         </a> 
+      
       <a
       href ="https://www.collegeboard.org"></a>
       <img
@@ -45,13 +46,6 @@
       />
     </div>
 
-    <div class="parent-flex">
-      <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
-      />
-      <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/IMG_3767.png?v=1746635392409"
-      />
-    </div>
+   
   </body>
 </html>
