--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Select ONE Additional Feature to Add
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="aboutme.html">Tips</a></li>
       <li><a href="art.html">Ideas</a></li>
-      <li><a href="resume.html">Resources</a></li>
+      <li><a href="resume.html">❤️</a></li>
       <li style="float: right">
         <a target="_blank" href=""
           ><img
