--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="aboutme.html">About Me</a></li>
       <li><a href="art.html">Art</a></li>
-      <li><a class="active" href="resume.html">Resume</a></li>
+      <li><a class="active" href="resume.html">❤️</a></li>
       <li style="float: right">
         <a target="_blank" href=""
           ><img
@@ -28,9 +28,14 @@
             src="https://img.icons8.com/win10/512/FFFFFF/instagram-new.png"
             style="width: 25px; margin: -5px"
         /></a>
+        
       </li>
     </ul>
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
-    <h1>Resume</h1>
+    <h1>Good luck</h1>
+  <p>
+    This is a big step, and it’s okay to feel nervous or excited—or both. Just remember: your application is more than a list of grades or activities—it's your story, your effort, and your potential. Believe in what you bring to the table. 
+    </p>
+    
   </body>
 </html>
